Bug : About page header alignment

--- a/sass/_about_main.scss
+++ b/sass/_about_main.scss
@@ -106,9 +106,9 @@ main {
 }
 
 @media screen and (max-width: 630px){
-    html {
-        font-size: 9px;
-    }
+    // html {
+    //     font-size: 9px;
+    // }
 
     main {
         height: auto;
